--- a/login.html
+++ b/login.html
@@ -27,6 +27,8 @@
                 </div>
                 <div class="card-footer text-right">
                     <small>&copy;Chinmay Keripale</small>
+                    <br>
+                    <a href="https://chinmay3775.github.io/Simple-registration-page/registration.html"> Don't have an Account? Register here. </a>
                 </div>
             </div>
         </div> 
